<resources>
    <string name="app_name">myProject</string>
    <string name="login_as_a_doctor">Login As a Doctor</string>
    <string name="login_as_a_patient">Login As a Patient</string>
    <string name="login">Login</string>
    <string name="email">Email</string>>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="iconprofile">iconProfile</string>
    <string name="iconlock">iconLock</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="register_as_a_patient">Register as a patient</string>
    <string name="register_as_a_doctor">Register as a doctor</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="patient_s_name">Patient\'s Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="age">Age</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="new_password">New Password</string>
    <string name="doctor_s_name">Doctor\'s Name</string>
    <string name="patient_1">Patient 1</string>
    <string name="email_id">Email ID:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="patient_list">Patient List</string>
    <string name="patient_2">Patient 2</string>
    <string name="patient_3">Patient 3</string>
    <string name="details">Details</string>
    <string name="health_details">Health Details</string>
    <string name="heart">heart</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="_112bpm">112bpm</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="_120_82mmhg">120/82mmHg</string>
    <string name="get_started">Get Started</string>
    <string name="dhwani">Dhwani</string>
    <string name="doclink">DocLink</string>
    <string name="hello_world">Hello, World!</string>
    <string name="doctor">Doctor</string>
    <string name="enter_your_email_id">Enter Your Email ID</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="a_za_z0_9_a_z_a_z">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
</resources>