<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".patient_home_page">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <!-- Inner LinearLayout with Text Views -->
        <LinearLayout
            android:id="@+id/innerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1 "
            android:layout_marginEnd="20dp"
            >

            <TextView
                android:text="@string/patient_1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:text="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:text="@string/date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:text="@string/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

        </LinearLayout>

        <!-- ImageView to the Right with Constraints -->
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/img_3"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/iconprofile"
            android:layout_gravity="center_vertical"
            app:layout_constraintTop_toTopOf="@+id/innerLayout"
            app:layout_constraintBottom_toBottomOf="@+id/innerLayout"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/health_details"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        >

        <ImageView
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:src="@drawable/img_4"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/heart"
            />

        <TextView
            android:text="@string/heart_rate"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_112bpm"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:gravity="right"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        >

        <ImageView
            android:layout_width="38dp"
            android:layout_height="36dp"
            android:src="@drawable/img_5"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/heart"
            />

        <TextView
            android:text="@string/blood_pressure"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_120_82mmhg"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:gravity="right"
            />
    </LinearLayout>


</LinearLayout>