<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".doctor_register"
    android:background="@drawable/img_2"
    >

    <TextView
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@drawable/bg1"
        >

        <!-- Doctor Name Section -->
        <TextView
            android:text="@string/enter_your_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/textfield2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/doctor_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_marginStart="5dp"
                android:hint="@string/doctor_s_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Age Section -->
        <TextView
            android:text="@string/age"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Horizontal Layout for Day, Month, and Year -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <Spinner
                android:id="@+id/day"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:background="@drawable/textfield2"
                android:layout_marginStart="8dp"/>

            <!-- Month -->
            <Spinner
                android:id="@+id/month"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:background="@drawable/textfield2"
                android:layout_marginStart="8dp"/>

            <!-- Year -->
            <Spinner
                android:id="@+id/year"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:background="@drawable/textfield2"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <!-- Gender Section -->
        <TextView
            android:text="@string/gender"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >

            <!-- Male RadioButton -->
            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:padding="16dp"
                />

            <!-- Female RadioButton -->
            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:padding="16dp"

                />

            <!-- Others RadioButton -->
            <RadioButton
                android:id="@+id/radioButtonOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:padding="16dp"
                />

        </RadioGroup>

        <!-- Mobile Number Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/enter_your_mobile_number"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/textfield2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/mobile_number"
                android:layout_marginStart="5dp"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Email Section -->
        <TextView
            android:text="@string/enter_your_email_id"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/textfield2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_marginStart="5dp"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/enter_new_password"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/textfield2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_marginStart="5dp"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_doctor"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_style2"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="5dp"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@color/color1"
                android:layout_marginStart="2sp"
                />
        </LinearLayout>
    </FrameLayout>


</LinearLayout>