<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Login"
    android:background="@drawable/img_2"
    >

    <TextView
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="120dp"
        android:textColor="@color/black"
        />

    <!-- Email Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/img"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/iconprofile"
            />

        <TextView
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textfield1"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/img_1"
            android:contentDescription="@string/iconlock"
            android:layout_marginEnd="3dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold"
             />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/textfield1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_patient"
        android:text="@string/login_as_a_patient"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_style2"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="5dp"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btn_doctor"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/button_style1"
        android:text="@string/login_as_a_doctor"
        android:textColor="@color/color1"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/color1"
                android:layout_marginStart="2sp"
                />
        </LinearLayout>
    </FrameLayout>


</LinearLayout>