<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Register"
    android:background="@drawable/img_2"
    >

    <TextView
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="120dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btn_reg_patient"
        android:text="@string/register_as_a_patient"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_style2"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btn_reg_doctor"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/button_style1"
        android:text="@string/register_as_a_doctor"
        android:textColor="@color/color1"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@color/color1"
                android:layout_marginStart="2sp" />
        </LinearLayout>
    </RelativeLayout>




</LinearLayout>