<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/img_2"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="332dp"
        android:layout_height="384dp"
        android:src="@drawable/doctor"
        android:layout_gravity="center_horizontal"
        android:layout_margin="40dp"
        android:contentDescription="@string/doctor" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dhwani"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- Your other layout components go here -->

        <Button
            android:id="@+id/get_started"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/button_style2"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="30dp"
            android:layout_width="315dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="startLoginActivity"
            />
    </RelativeLayout>


</LinearLayout>